--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,21 @@
   margin: 0 auto;
   max-width: 1200px;
   text-align: center;
+  background-color: #fff;
+}
+
+.main{
+  background-color: #666;
 }
 
 .boxs{
-  width: 80%;
-  max-width: 800px;
+  width: 100%;
   color: white;
   padding: 20px;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
+  background: #61ae56;
   transform: translate(-50%,-50%);
   -webkit-transform: translate(-50%,-50%);
 }
@@ -21,7 +26,26 @@
 }
 
 .header{
-  color: #333;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+}
+
+.tel-on{
+  margin: 0px auto;
+  height: 2em;
+  font-size: 2em;
+  color: #fff;
+  line-height: 2em;
+  text-align: center;
+  background-color: #fff;
+}
+
+.mgo-number{
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1em;
 }
 
 .introduction{
@@ -64,6 +88,34 @@
   text-align: center;
   line-height: 70px;
   background-color: #1e88e5;
+}
+
+@keyframes background {
+  50% {
+    background: skyblue;
+    box-shadow: 0 -200px 100px -100px #61ae56 inset;
+  }
+}
+.fixed{
+  width: 100%;
+  position:fixed;
+  bottom: 0;
+  padding:0;
+  background-color: rgba(102, 102, 102, 0);
+  text-align: center;
+}
+
+.fixed-inner{
+  width: 100%;
+  max-width: 1200px;
+  color: #fff;
+  margin: 0 auto;
+  bottom: 0;
+  padding: 15px 0;
+  background-color: #666;
+  text-align: center;
+  box-shadow: 0 -200px 100px -120px #C13323 inset;
+  animation: background 3s infinite alternate;
 }
 
 .code{
