--- a/src/App.css
+++ b/src/App.css
@@ -1,139 +1,278 @@
-.container{
-  margin: 0 auto;
-  max-width: 1200px;
-  text-align: center;
-  background-color: #fff;
+.container {
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+    background-color: #fff;
 }
 
-.main{
-  background-color: #666;
+.main {
+    background-color: #666;
 }
 
-.boxs{
-  width: 100%;
-  color: white;
-  padding: 20px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  background: #61ae56;
-  transform: translate(-50%,-50%);
-  -webkit-transform: translate(-50%,-50%);
+.boxs {
+    width: 100%;
+    color: white;
+    position: absolute;
+    padding-bottom: 0.67em;
+    top: 40%;
+    left: 50%;
+    background: #61ae56;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
-.title{
-  font-size: 2.6em;
+.title {
+    font-size: 2.6em;
 }
 
-.header{
-  width: 100%;
-  color: #fff;
-  text-align: center;
+.header {
+    width: 100%;
+    color: #fff;
+    text-align: center;
 }
 
-.tel-on{
-  margin: 0px auto;
-  height: 2em;
-  font-size: 2em;
-  color: #fff;
-  line-height: 2em;
-  text-align: center;
-  background-color: #fff;
+.tel-on {
+    height: 2em;
+    font-size: 2em;
+    width: 100%;
+    color: #fff;
+    line-height: 2em;
+    text-align: center;
+    top: 56%;
+    left: 50%;
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0);
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
-.mgo-number{
-  color: black;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1em;
+.tel-on-button {
+    height: 100%;
+    display: inline-block;
+    margin: 0px 15px;
 }
 
-.introduction{
-  font-size: 1.5em;
-  font-weight: 200;
-  color: #1e88e5;
+.mgo-number {
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1em;
+}
+
+.introduction {
+    font-size: 1.5em;
+    font-weight: 200;
+    color: #1e88e5;
 }
 
 .buttons {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
-.space{
-  width: 30px;
-  display: inline-block;
+.space {
+    width: 30px;
+    display: inline-block;
 }
 
-.left{
-  text-align: left;;
+.left {
+    text-align: left;
+    ;
 }
 
-.box-con{
-  font-size: 18px;
-  line-height: 1.4em;
+.box-con {
+    font-size: 18px;
+    line-height: 1.4em;
 }
 
-.blue{
-  color: #1e88e5;
+.blue {
+    color: #1e88e5;
 }
 
-.bsize{
-  font-size: 1.8em;
+.bsize {
+    font-size: 1.8em;
 }
 
-.footer{
-  width: 100%;
-  height: 70px;
-  color: #fff;
-  margin-top: 50px;
-  text-align: center;
-  line-height: 70px;
-  background-color: #1e88e5;
+.footer {
+    width: 100%;
+    height: 70px;
+    color: #fff;
+    margin-top: 50px;
+    text-align: center;
+    z-index: 20;
+    line-height: 70px;
+    background-color: #1e88e5;
+}
+
+.btn-primary, .sppb-btn-primary {
+    border-color: #259d64;
+    background-color: #2bb674;
+    color: #ffffff;
+    text-decoration: none;
+    transition: color 1200ms, background-color 1200ms, border-color 1200ms;
+}
+
+.o2t-element--hidden {
+    opacity: 0 !important;
+    visibility: hidden !important;
+    transition: .55s opacity, .55s visibility, height .2s linear;
+}
+
+.o2t-element{
+    opacity: 1;
+    z-index: 10;
+    visibility: visible;
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    margin: 0 5px;
+    transform: translate(0, 0);
+}
+
+.icon-whatsapp {
+    background: url('./assets/whatsapp-symbol.svg');
+    height: 20px;
+    width: 20px;
+    color: #fff;
+}
+
+.sppb-btn-lg {
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 6px;
+}
+
+.sppb-btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.rc-menu-item-selected {
+    background-color: rgb(97, 174, 86) !important;
+    color: #fff !important;
+    transform: translateZ(0);
+}
+
+.rc-menu-item-active{
+    background-color: rgb(97, 174, 86) !important;
+    color: #fff !important;
+    transform: translateZ(0);
 }
 
 @keyframes background {
-  50% {
-    background: skyblue;
-    box-shadow: 0 -200px 100px -100px #61ae56 inset;
+    50% {
+        background: skyblue;
+        box-shadow: 0 -200px 100px -100px #61ae56 inset;
+    }
+}
+
+.fixed {
+    width: 100%;
+    position: fixed;
+    background-color: #666;
+    bottom: 0;
+    padding: 0;
+    background-color: rgba(102, 102, 102, 0);
+    text-align: center;
+}
+
+.fixed-high {
+    height: 60%;
+}
+
+.dialog-inner {
+    margin : 0 10%;
+    background-color: #fff;
+    height: 100%;
+    border-radius: 3px;
+    border-color: #1e88e5;
+    border-width: 4px;
+    border-style: solid;
+}
+
+.fixed-inner {
+    width: 100%;
+    cursor: pointer;
+    color: #fff;
+    margin: 0 auto;
+    bottom: 0;
+    padding: 15px 0;
+    background-color: #666;
+    text-align: center;
+    box-shadow: 0 -200px 100px -120px #C13323 inset;
+    animation: background 3s infinite alternate;
+}
+.form input {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
   }
-}
-.fixed{
-  width: 100%;
-  position:fixed;
-  bottom: 0;
-  padding:0;
-  background-color: rgba(102, 102, 102, 0);
-  text-align: center;
+.form button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    margin : 0 10%;
+    background: #4CAF50;
+    border-right: solid 4px #1e88e5;
+    border-left: solid 4px #1e88e5;
+    width: 80%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    bottom:0;
+    left: 0;
+    position: absolute;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+  }
+  .form{
+      height: 100%;
+  }
+.code {
+    font-size: 14px;
 }
 
-.fixed-inner{
-  width: 100%;
-  max-width: 1200px;
-  color: #fff;
-  margin: 0 auto;
-  bottom: 0;
-  padding: 15px 0;
-  background-color: #666;
-  text-align: center;
-  box-shadow: 0 -200px 100px -120px #C13323 inset;
-  animation: background 3s infinite alternate;
-}
-
-.code{
-  font-size: 14px;
-}
-
-.underline{
-  text-decoration:underline;
+.underline {
+    text-decoration: underline;
 }
 
 @media screen and (max-width: 640px) {
-    .title{
-      font-size: 1.8em;
+    .title {
+        font-size: 1.8em;
     }
-
     .space {
         width: 0px;
-        display:block;
+        display: block;
         height: 20px;
     }
 }
